Update styles.css to fix overflow

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ html {
 
 body {
   background-color: rgba(217, 217, 217, 1);
+  overflow-x: hidden;
 }
 
 header h1 {
